--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Atobiloye A.A</a>
+						<a href="https://github.com/Rodnah?tab=repositories" class="logo">Atobiloye A.A</a>
 					</header>
 
 				<!-- Nav -->
@@ -54,7 +54,7 @@
 								<header class="major">
 									<span class="date">January 08, 2024</span>
 									<h2><a href="https://github.com/Rodnah/NHS-Cancer-Diagnoses"><br />
-									Scraping of Cancer Data from NHS England</a></h2>
+									Scrapping of Cancer Data from NHS England</a></h2>
 									<p>In this project, I scrapped data from the NHS England website to analyze registered cancer diagnoses over two years.</p>
 								</header>
 								<a href="https://github.com/Rodnah/NHS-Cancer-Diagnoses" class="image main"><img src="images/Canc1.jpg" alt="" /></a>
@@ -68,7 +68,7 @@
 								<article>
 									<header>
 										<span class="date">December 14, 2023</span>
-										<h2><a href="https://github.com/Rodnah/Maternal-Mortality-Ratio">Visualisation of Maternal Mortality Rate in Tableau<br />
+										<h2><a href="https://github.com/Rodnah/Maternal-Mortality-Ratio"> Analysis of Maternal Mortality Ratio in Tableau<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Rodnah/Maternal-Mortality-Ratio" class="image fit"><img src="images/Maternal Mortality.jpg" alt="" /></a>
@@ -80,7 +80,7 @@
 								<article>
 									<header>
 										<span class="date">January 17, 2024</span>
-										<h2><a href="https://github.com/Rodnah/Mental-Health-Disorders">Mental Health Disorders Prevalence in Tableau<br />
+										<h2><a href="https://github.com/Rodnah/Mental-Health-Disorders"> Analysis Mental Health Disorders Prevalence, using SQL & Tableau<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Rodnah/Mental-Health-Disorders" class="image fit"><img src="images/Mental Health.webp" alt="" /></a>
@@ -94,7 +94,7 @@
 								<article>
 									<header>
 										<span class="date">November 29, 2023</span>
-										<h2><a href="https://github.com/Rodnah/Chronic-Kidney-Cardiovascular-Disease-Analysis">Chronic Kidney Disease Analysis in Python<br />
+										<h2><a href="https://github.com/Rodnah/Chronic-Kidney-Cardiovascular-Disease-Analysis">Chronic Kidney Disease Analysis with SQL & Python<br />
 										</a></h2>
 									</header>
 									<a href="https://github.com/Rodnah/Chronic-Kidney-Cardiovascular-Disease-Analysis" class="image fit"><img src="images/CKD.jpg" alt="" /></a>
