--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							
 						</ul>
 						<ul class="icons">
-							<li><a href="https://https://www.linkedin.com/in/aminah-a-25b700bb/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/aminah-a-25b700bb/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									
 									<li><a href="https://github.com/Rodnah" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
@@ -114,7 +114,8 @@
 							</section>
 							<section>
 								<h3>Phone</h3>
-								<p><a href="#">+1 437 443 4080</a></p>
+								<p><a href="tel:+14374434080">+1 437 443 4080</a></p>
+
 							</section>
 							<section>
 								<h3>Email</h3>
@@ -123,7 +124,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://https://www.linkedin.com/in/aminah-a-25b700bb/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://www.linkedin.com/in/aminah-a-25b700bb/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 
 									<li><a href="https://github.com/Rodnah" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
@@ -150,3 +151,4 @@
 	</body>
 
 </html>
+
